[workspace]
members = [
    "privacy-program",
    "privacy-client",
    "wallet-sdk",
    "anti-mev",
    "governance",
    "common",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Untrace Team"]

[workspace.dependencies]
# Solana dependencies
solana-program = "1.17"
solana-sdk = "1.17"
solana-client = "1.17"
anchor-lang = "0.29"
anchor-spl = "0.29"

# Cryptography
curve25519-dalek = "4.1"
ed25519-dalek = "2.1"
sha3 = "0.10"
blake3 = "1.5"
aes-gcm = "0.10"

# Serialization
borsh = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
bs58 = "0.5"
hex = "0.4"
rand = "0.8"
