[package]
name = "untrace-anti-mev"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
untrace-common = { path = "../common" }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
sha3 = { workspace = true }
