[package]
name = "untrace-privacy-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
untrace-common = { path = "../common" }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
anchor-lang = { workspace = true }
borsh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
bs58 = { workspace = true }
rand = { workspace = true }
curve25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
sha3 = { workspace = true }
