[package]
name = "untrace-privacy-program"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
untrace-common = { path = "../common" }
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
solana-program = { workspace = true }
borsh = { workspace = true }
sha3 = { workspace = true }

[features]
no-entrypoint = []
